# svg-raymarching

./: .gitmodules  CMakeLists.txt  bezier.hpp  bezier_clip.hpp  bezier_martinez.cpp  bezier_martinez_impl.hpp  cframe2d.hpp  common.hpp  dead_shader_storage.hpp  ellipse.hpp  equations.hpp  gauss_legendre.hpp  gauss_legendre_values.inl  hatch.cpp  hatch.hpp  hatch_impl.hpp  hatch_shader.hpp  main.cpp  martinez.cpp  martinez.hpp  martinez_impl.hpp  pair.hpp  shader.cpp  shader.hpp  subdivision.hpp  svg.cpp  svg.hpp  svg_shader.hpp  svg_subdivision.cpp  test_martinez.cpp  visitor_base.hpp
